Fix [Table] align status to the right

--- a/src/elements/TableLinkCell/tableLinkCell.scss
+++ b/src/elements/TableLinkCell/tableLinkCell.scss
@@ -52,17 +52,5 @@
         width: auto;
       }
     }
-
-    .status {
-      display: flex;
-      flex: 0 1 12px;
-      align-items: center;
-      justify-content: center;
-      margin-left: 5px;
-
-      & > * {
-        margin: 0;
-      }
-    }
   }
 }
